--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
+
+.sc-pyfCe{
+  background: #0b1426;
+}
+.sc-eDvSVe {
+  background: #0b1426;
+  
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,16 +16,51 @@ body {
   background: #0b1426;
   color: white;
 }
+.canvas-btn{
+  background-color: transparent;
+  border: none;
+}
+.topbar-btn {
+  background: linear-gradient(90deg, #1199fa, #11d0fa);
+  border-radius: 4px;
+  line-height: 22px;
+  border: none;
+  outline: none;
+  padding: 8px 24px;
+}
+.logo {
+  height: 40px;
+  width: 40px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+.canvas{
+  
+  background-color:#0b1426;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(90deg, #1199fa, #11d0fa);
+}
 // --------------------------------------------- Header-------------------------
 .navbar {
   background: #0b1426;
   color: white;
   padding-top: 17px;
   padding-bottom: 10px;
-  .logo{
+ 
+  .logo {
     height: 40px;
     width: 40px;
-    margin-right: 10px
+    margin-right: 10px;
+    border-radius: 50%;
   }
   a {
     font-size: 1rem;
@@ -24,34 +68,36 @@ body {
     color: white;
     font-weight: 600;
   }
- 
+
   a:focus {
     color: blue;
   }
-  .input-search{
+  .input-search {
     position: relative;
   }
-  .input-icon{
+  .input-icon {
     position: absolute;
     top: 30px;
     left: 140px;
   }
 
-.dropdown-btn{
+  .dropdown-btn {
     background-color: transparent;
     color: white;
     font-weight: 600;
-}
-
+  }
+  .dropdown-btn:focus {
+    border: none;
+  }
   input {
     width: 100%;
     border-radius: 2rem;
     padding: 8px 39px;
     outline: none;
-    background: transparent;    
+    background: transparent;
     border: 1px solid rgb(227, 227, 227);
   }
-  input:focus{
+  input:focus {
     background-color: white;
     outline: none;
     border: 1px solid blue;
@@ -64,6 +110,8 @@ body {
     background: linear-gradient(90deg, #1199fa, #11d0fa);
     border-radius: 4px;
     line-height: 22px;
+    border: none;
+    outline: none;
     padding: 8px 24px;
   }
 }
@@ -95,6 +143,7 @@ body {
 // }
 
 //-----------------------------------------marketplace------------------------------
+//-----------------------------------------explore----------------------------
 .explore {
   .filter {
     display: flex;
@@ -154,5 +203,59 @@ body {
   input.input-checks {
     width: 20px;
     height: 20px;
+  }
+  .explore-left {
+    position: fixed;
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+    ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: brown;
+      border-radius: 10px;
+    }
+  }
+  
+  // overflow: hidden;
+}
+
+//-----------------------------------------card one-------------------------
+.cardone {
+  background-color: white;
+  height: 85vh;
+  overflow: hidden;
+  .container {
+    padding-top: 90px;
+  }
+  .back-btn{
+    color: blue;
+  }
+  .card-one-img2 {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+  }
+  .img {
+    position: relative;
+  }
+  .cardone-btn{
+    border: 1px solid rgb(148, 155, 164);
+    border-radius: 2rem;
+    padding: 1px 8px;
+    line-height: 1.3em;
+    color: rgb(148, 155, 164);
+  }
+  .card-one-img3 {
+    position: absolute;
+    top: 25px;
+    left: 30px;
+  }
+  .cardone-img {
+    border-radius: 10px;
+    height: auto;
+    max-width: 100%;
   }
 }
